<resources>
    <string name="app_name">Quizify</string>
    <string name="title_activity_login">login_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="letsStart">Let\'s Start</string>
    <string name="beFirst">Be the first!</string>
    <string name="quantitative">Quantitative</string>
    <string name="logical">Logical</string>
    <string name="verbal">Verbal Reasoning </string>
    <string name="choose">Choose Topic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>